Get first page from BestBuy Products API with a little formatting

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,14 +6,25 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
-        android:contentDescription="thumbnail"/>
+        android:contentDescription="thumbnail"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/salePrice"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textColor="#DD3333"
+        android:textSize="20dp"
+        android:gravity="center"/>
 
 </LinearLayout>
