--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,23 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/buttonfirst"/>
+
+    <Button
+        android:id="@+id/buttonfirst"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:enabled="false"
+        android:onClick="first"
+        android:text="@string/first" />
+
+    <Button
+        android:id="@+id/buttonprev"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/buttonfirst"
+        android:layout_toEndOf="@+id/buttonfirst"
+        android:enabled="false"
+        android:onClick="previous"
+        android:text="@string/previous" />
+
+    <Button
+        android:id="@+id/buttonlast"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:enabled="false"
+        android:onClick="last"
+        android:text="@string/last" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
+        android:layout_centerHorizontal="true"
+        android:indeterminateOnly="true" />
+
+    <Button
+        android:id="@+id/buttonnext"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/buttonlast"
+        android:layout_toStartOf="@+id/buttonlast"
+        android:enabled="false"
+        android:onClick="next"
+        android:text="@string/next" />
+
     <TextView
-        android:id="@+id/search_title"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="24dp"
+        android:layout_above="@android:id/list"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/buttonnext"
+        android:layout_toRightOf="@+id/buttonprev"
+        android:layout_toStartOf="@+id/buttonnext"
+        android:layout_toEndOf="@+id/buttonprev"
+        android:gravity="center_horizontal|center_vertical"
+        android:textSize="20sp"
         android:background="#444444"
-        android:textColor="#CCCCCC"
-        android:text="Searching for 'smartphone'"/>
+        android:textColor="#CCCCCC"/>
 
-    <ListView
-        android:id="@+id/lists_product"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
 
-</LinearLayout>
+
+</RelativeLayout>
