--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
         android:gravity="center"/>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/name"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
